fix: options getting misaligned due to 50-50 options

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,8 +32,9 @@ body {
 }
 
 .fifty_fifty {
-  display: none;
+  /* display: none; */
   /* background: grey;
   opacity: 0.05;
   cursor: not-allowed; */
+  visibility: hidden;
 }
